styles.css
@font-face {
  font-family: Coolvetica;
  src: url("./fonts/Coolvetica\ Rg.otf");
}

@font-face {
  font-family: "open-sauce";
  src: url("./open-sauce.sans-regular.ttf");
}

* {
  margin: 0;
  padding: 0;
}

body {
    font-family: "Inter", sans-serif;
    color: #2d0e11;
    background-color: #f6ebec;
    line-height: 1.6;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }

  .highlighted {
    position: relative;
    display: inline-block;
    font-size: 1.3rem;
    font-weight: 500;
    color: #333;
  }
  
  .highlighted::after {
    content: "";
    position: absolute;
    width: 0;
    height: 3px;
    background-color: #f39c12; /* Underline color */
    bottom: 0;
    left: 0;
    animation: underlineAnimation 1s forwards;
  }
  
  @keyframes underlineAnimation {
    0% {
      width: 0;
    }
    100% {
      width: 100%; /* Full width of the text */
    }
  }
  

h1,
h2,
h3 {
  font-family: "Coolvetica", sans-serif;
}

h1 {
  font-size: 3rem;
  font-weight: bold;
}

p {
  font-size: 1.2rem;
  max-width: 800px;
}

html {
  scroll-behavior: smooth;
}

/* Desktop nav */

nav,
.nav-links {
  display: flex;
}

nav {
  justify-content: space-around;
  align-items: center;
  height: 20vh;
}

.nav-links {
  gap: 2rem;
  list-style: none;
  font-size: 1.5rem;
}

a {
  color: #2d0e11;
  text-decoration: none;
  text-decoration-color: white;
}

a:hover {
  text-decoration: underline;
  text-underline-offset: 1rem;
  text-decoration-color: #2d0e11;
}

/* Mobile Navigation Bar */
#mobile-nav {
  display: none;
  position: relative;
}

.menu-icon {
  font-size: 2rem;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 1000;
}

.mobile-links {
  display: none;
  flex-direction: column;
  position: absolute;
  top: 60px;
  right: 20px;
  overflow: hidden;
  list-style: none;
  border-radius: 5px;
  background-color: #f6ebec;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 1000;
}

.mobile-links li {
  list-style: none;
}

.mobile-links a {
  display: block;
  padding: 15px;
  text-align: center;
  text-decoration: none;
  font-size: 1.5rem;
  transition: all 0.3 ease-in-out;
}

.mobile-links a:hover {
  background-color: #e5bbbe;
}

.mobile-links.open {
  display: flex;
}

@media screen and (max-width: 768px) {
  #desktop-nav {
    display: none;
  }
  #mobile-nav {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10px;
  }
}

/* Hero Section */
.hero-text h1 {
  font-weight: 1000;
  font-size: 3.5rem;
  margin-bottom: 15px;
  letter-spacing: 2.5px;
}

.hero-container button {
  padding: 12px 24px;
  background-color: #2d0e11;
  color: white;
  border: none;
  border-radius: 2rem;
  font-weight: 600;
  transition: background 0.3s ease;
}

.hero-container button:hover {
  background-color: #5a1f1d;
  cursor: pointer;
}

.img-container {
  width: 300px;
  height: 300px;
  border-radius: 50%;
  overflow: hidden;
}

.img-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transform: scale(1.47) translateX(5px) translateY(8px);
}

.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.wrapper {
  display: flex;
  justify-content: center;
  padding: 10px 10%;
}

.hero-text {
  margin: 20px;
  font-weight: 500;
  font-size: 1.2rem;
  text-align: center;
}

/* About Me */
.about-me {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 2rem;
  height: auto;
  border-top: solid;
}

.about-me-text {
  text-align: center;
  font-size: 1.3rem;
  margin-bottom: 1.5rem;
  max-width: 800px;
}

.about-me h1 {
  margin-top: 4rem;
  text-decoration: underline;
  text-underline-offset: 1rem;
  letter-spacing: 2px;
}

/* Other Section */
.card-area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: auto;
  padding: 2rem 2rem;
}

.card-area h2 {
  margin-bottom: 3rem;
  font-size: 2.5em;
}

.box-area {
  display: flex;
  justify-content: center;
  gap: 30px;
  max-width: 900px;
}

.card-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 4rem;
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 10px;
  position: relative;
  overflow: hidden;
  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
  width: 90%;
  max-width: 220px;
  height: auto;
  aspect-ratio: 4/5;
  transform-style: preserve-3d;
  transition: transform 0.6s;
}

.box img,
.overlay {
  will-change: transform, opacity;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 1s;
}

.overlay {
  height: 100%;
  width: 100%;
  background: linear-gradient(transparent, #1c1c1c 80%);
  border-radius: 10px;
  position: absolute;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-direction: column;
  padding: 10px;
  text-align: center;
  transition: opacity 0.3s ease-in-out;
  opacity: 0;
}

.overlay p {
  color: white;
  font-size: 10px;
  font-weight: 550;
  line-height: 1.4;
  max-width: 90%;
}

.box:hover img {
  transform: rotateY(180deg);
}

.box:hover .overlay {
  opacity: 1;
}

.card-container h5 {
  padding: 10px;
  margin-top: 5px;
  font-size: 1.1rem;
  margin-top: 10px;
}

/* Work Header */
.header-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50vh;
  border-top: solid;
}

.header-wrapper p {
  text-align: center;
  width: 900px;
  font-size: 20px;
}

.header h1 {
  font-weight: 800;
  margin: 2rem;
  letter-spacing: 2.5px;
}

/* Skills section */
.skills {
  height: 130vh;
}

.skills h1 {
  text-align: center;
  text-decoration: underline;
  letter-spacing: 3px;
}

.skills-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 725px;
  height: 415px;
  border: solid;
}

.skills-container h3 {
  font-size: 2.5rem;
}

.skills-container-container {
  display: flex;
  justify-content: center;
  margin: 2em;
}

#davinci {
  transform: scale(1.2);
}

.icon-container {
  display: flex;
  text-align: center;
  flex-wrap: wrap;
  gap: 50px;
  margin: 30px;
}

.icon {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.icon:hover {
  transform: scale(1.1);
}

.icon img {
  width: 50px;
  height: 50px;
  margin-bottom: 5px;
}

.icon p {
  max-width: 200px;
  font-size: 20px;
  word-wrap: break-word;
}

/* Project Section */
.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 80vh;
}

.project-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  transform: scale(1.2);
  padding: 20px;
  border-radius: 8px;
  transition: transform 0.3 ease-in-out;
}

.project-container:hover {
  transform: scale(1.3);
}

.project-container-container {
  display: flex;
  justify-content: center;
  gap: 100px;
}

.projects h1 {
  text-align: center;
  text-decoration: underline;
  text-underline-offset: 1rem;
  margin-bottom: 2em;
  letter-spacing: 2px;
}

.projects h4 {
  margin-top: 40px;
}

.projects p {
  max-width: 350px;
  text-align: center;
  font-size: 15px;
}

.projects img {
  max-width: 300px;
  max-height: 200px;
}

.project-img {
  border-radius: 5px;
  border: solid 3px;
}

.project-icon {
  display: flex;
  width: 30px;
  height: 30px;
  gap: 5px;
}

.project-icon-container {
  display: flex;
  gap: 70px;
}

/* Footer Section */
footer {
  text-align: center;
  padding: 20px 0;
}

footer p {
  font-size: 1rem;
  margin-top: 10px;
}

.social-icons {
  display: flex;
  justify-content: center;
  gap: 15px;
  margin-top: 10px;
}

.social-icons img {
  width: 30px;
  height: 30px;
  transition: transform 0.3s;
}

.social-icons img:hover {
  transform: scale(1.2);
}

